# anininja_backend

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  sample.env
.github/workflows/: build_and_deploy.yml
app/: main.py
app/api/: routers.py
app/api/endpoints/anime/: router.py
app/api/endpoints/director/: router.py
app/api/endpoints/genre/: router.py
app/api/endpoints/studio/: router.py
app/api/endpoints/user/: router.py  vk.py
app/core/: db.py  logger.py  mapper.py  security.py  settings.py
app/core/controllers/: anime.py  base.py  comment.py  director.py  genre.py  studio.py  user.py
app/core/filters/: anime.py  base.py
app/core/models/: anime.py  base.py  comment.py  director.py  genre.py  poster.py  rating.py  studio.py  user.py
app/core/schemas/: anime.py  base.py  comment.py  director.py  genre.py  poster.py  rating.py  studio.py  user.py
