[tool.poetry]
name = "anininja-backend"
version = "1.2.0"
description = ""
authors = ["TRDC <vudi600@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.111.0"
pydantic-settings = "^2.4.0"
sqlalchemy = "^2.0.32"
asyncpg = "^0.29.0"
uvicorn = "^0.30.6"
pydantic = "^2.8.2"
toml = "^0.10.2"
requests = "^2.32.3"
pycryptodome = "^3.21.0"
pyjwt = "^2.10.1"


[tool.poetry.group.dev.dependencies]
mixer = "^7.2.2"
pytest-asyncio = "^0.24.0"
psycopg2-binary = "^2.9.9"
pytest = "^8.3.2"
mkdocs = "^1.6.1"
mkdocstrings = "^0.26.0"
mkdocstrings-python = "^1.10.9"
isort = "^5.13.2"
black = "^24.8.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
